--- a/style.css
+++ b/style.css
@@ -41,3 +41,11 @@ ul li{
     margin-top: 27px;
     font-size: 14px;
 }
+ul  li a{
+    text-decoration: none;
+    color:#fff;
+    font-family:Arial;
+    transaction: 0.4s ease-in-out;}
+ul li a:hover{
+    color:#ff7200;
+}
