--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@
     font-family: Arial;
     padding-left: 20px;
 }
+.logo{
+    color:#ff7200;
+    font-size: 35px;
+    padding-left: 20px;
+    float: left;
+    padding-top: 10px;
+}
+    
 .menu{
     width: 400px;
     float: left;
