--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@
     margin: auto;
 }
 .icon{
-    color: #ff7200;
-    font-size: 35px;
-    font-family: Arial;
-    padding-left: 20px;
+   width: 200px;
+    float: left;
+    height: 70px;
+}
 }
 .logo{
     color:#ff7200;
