--- a/style.css
+++ b/style.css
@@ -16,3 +16,43 @@
     height: 75px;
     margin: auto;
 }
+.icon{
+   width: 200px;
+    float: left;
+    height: 70px;
+}
+.logo{
+    color:#ff7200;
+    font-size: 35px;
+    padding-left: 20px;
+    float: left;
+    padding-top: 10px;
+}
+    
+.menu{
+    width: 400px;
+    float: left;
+    height: 70px;
+}
+
+ul{
+    float: left;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+ul li{
+    list-style: none;
+    margin-left: 62px;
+    margin-top: 27px;
+    font-size: 14px;
+}
+ul  li a{
+    text-decoration: none;
+    color:#fff;
+    font-family:Arial;
+    transaction: 0.4s ease-in-out;}
+ul li a:hover{
+    color:#ff7200;
+}
