--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+ n*{
     margin: 0;
     padding: 0;
 
@@ -15,6 +15,7 @@
     width: 1200px;
     height: 75px;
     margin: auto;
+    background-color: #212121;
 }
 .icon{
    width: 200px;
