--- a/style.css
+++ b/style.css
@@ -1,58 +1,111 @@
- n*{
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+.container ul{
+    margin-left: 1250px;
+
+}
+.container {
+    display: flex;
+    flex-direction: row ;
+    align-items: left;
+    text-align: left;
+    max-width: 960px;
+    /* margin: 0 auto; */
+    padding: 20px;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+}
+
+header h1 {
+    text-align: left;
     margin: 0;
     padding: 0;
-
-}
-.main{
-    width: 100%;
-    background: linear-gradient(to top, rgba(197, 43, 43, 0.5)50%,rgba(0,0,0,0.5)50%);
-    background-image: url("2.gif");
-    background-position: center;
-    background-size: cover;
-    height: 109vh;
-}
-.navbar{
-    width: 1200px;
-    height: 75px;
-    margin: auto;
-}
-.icon{
-   width: 200px;
-    float: left;
-    height: 70px;
-}
-.logo{
-    color:#ff7200;
-    font-size: 35px;
-    padding-left: 20px;
-    float: left;
-    padding-top: 10px;
-}
-    
-.menu{
-    width: 400px;
-    float: left;
-    height: 70px;
 }
 
-ul{
-    float: left;
-    display:flex;
-    justify-content: center;
+nav {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
-ul li{
+nav ul {
     list-style: none;
-    margin-left: 62px;
-    margin-top: 27px;
-    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    display: flex;
 }
-ul  li a{
+
+nav ul li {
+    margin-right: 20px;
+}
+
+nav ul li:last-child {
+    margin-right: 0;
+}
+
+nav ul li a {
+    color: #fff;
     text-decoration: none;
-    color:#fff;
-    font-family:Arial;
-    transaction: 0.4s ease-in-out;}
-ul li a:hover{
-    color:#ff7200;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+nav ul li a:hover {
+    background-color: #555;
+}
+
+section {
+    padding: 40px 0;
+    text-align: center;
+}
+
+section h2 {
+    margin-bottom: 20px;
+}
+
+
+/* Add the existing CSS styles and then add the following */
+section#socials {
+    background-color: #f9f9f9;
+    padding: 40px 0;
+    text-align: center;
+    margin-top: 68vh;
+    display: flex;
+    flex-direction: row;
+}
+
+section#socials h2 {
+    margin-bottom: 20px;
+}
+
+ul.social-links {
+    list-style: none;
+    padding: 0;
+}
+
+ul.social-links li {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+ul.social-links li a {
+    display: block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+    background-color: #333;
+    color: #fff;
+    font-size: 20px;
+}
+
+ul.social-links li a:hover{
+    color:cyan;
 }
